Moving dev folder to unstable branch

--- a/stable/flac2all.1
+++ b/stable/flac2all.1
@@ -18,4 +18,4 @@ Flac2All is a multi-threaded script that will \fIconvert\fP your collection of F
 .SH BUGS
 Not all metadata is transferred to the \fImp3\fP format compared to the \fIvorbis\fP format.
 .SH AUTHOR
-ziva_vatra@mailshack.com
+zv@ziva-vatra.com
